--- a/cm006.Rmd
+++ b/cm006.Rmd
@@ -26,17 +26,17 @@ Load the `gapminder` and `tidyverse` packages. Hint: `suppressPackageStartupMess
     
 ```{r load packages, warning = FALSE, message = FALSE}
 # load your packages here:
-library(FILL_THIS_IN)
-library(FILL_THIS_IN)
+library(gapminder)
+library(tidyverse)
 ```
     
 
 ## `select()` (8 min)
 
 1. Make a data frame containing the columns `year`, `lifeExp`, `country` from the gapminder data, in that order.
-
+ 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, year, lifeExp, country)
 ```
 
 
@@ -46,20 +46,20 @@ select(gapminder, FILL_THIS_IN)
 # This will work:
 select(gapminder, country, continent, year, lifeExp)
 # Better way:
-select(gapminder, FILL_THIS_IN)
+select(gapminder, country:lifeExp)
 ```
 
 
 3. Select all variables, except `lifeExp`.
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder,-lifeExp)
 ```
 
 4. Put `continent` first. Hint: use the `everything()` function.
 
 ```{r}
-select(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+select(gapminder, continent, everything())
 ```
 
 
@@ -67,8 +67,8 @@ select(gapminder, FILL_THIS_IN, FILL_THIS_IN)
 
 ```{r}
 # compare
-select(gapminder, FILL_THIS_IN)
-rename(gapminder, FILL_THIS_IN)
+select(gapminder, cont = continent, everything())
+rename(gapminder, cont = continent)
 ```
 
 
@@ -77,19 +77,19 @@ rename(gapminder, FILL_THIS_IN)
 1. Order by year.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, year)
 ```
 
 2. Order by year, in descending order.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, desc(year))
 ```
 
 3. Order by year, then by life expectancy.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+arrange(gapminder, year, lifeExp)
 ```
 
 ## Piping, `%>%` (8 min)
@@ -111,7 +111,10 @@ Now using with pipes:
 
 ```{r}
 # alter the below to include 2 "pipes"
-arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
+gapminder %>%
+ select(year, lifeExp, country)%>% # this line selects columns year 
+ arrange(year, lifeExp)
+
 ```
 
 # Resume lecture 
@@ -124,14 +127,17 @@ Return to guide at section 6.7.
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000)
 ```
 
 2. Your turn: of those rows filtered from step 1., only take data from Asia.
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop < 100000000) %>%
+  filter(continent == "Asia")
+gapminder %>%
+filter(pop<100000000 & continent == "Asia")
 ```
 
 3. Repeat 2, but take data from countries Brazil, and China. 
@@ -150,7 +156,7 @@ Let's get:
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(gdpBill = gdpPercap * pop/100000000)
 ```
 
 Notice the backwards compatibility! No need for loops!
@@ -159,7 +165,7 @@ Try the same thing, but with `transmute` (drops all other variables).
 
 ```{r}
 gapminder %>%
-  transmute(FILL_THIS_IN)
+  transmute(gdpBill = round(gdpPercap * pop/100000000, digits=2))
 ```
 
 The `if_else` function is useful for changing certain elements in a data frame.
@@ -168,12 +174,14 @@ Example: Suppose Canada's 1952 life expectancy was mistakenly entered as 68.8 in
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(lifeExp = if_else(country == "Canada" & year == 1952, 70, lifeExp))
 ```
 
 Your turn: Make a new column called `cc` that pastes the country name followed by the continent, separated by a comma. (Hint: use the `paste` function with the `sep=", "` argument).
 
 ```{r}
+gapminder %>%
+  mutate (cc = paste (sep = ","))
 ```
 
 These functions we've seen are called __vectorized functions__.
