--- a/007-1.Rmd
+++ b/007-1.Rmd
@@ -15,7 +15,7 @@ output:
     theme: paper
 ---
 
-<!---The following chunk allows errors when knitting--->
+<!---The following chunk allows errors when knitting--
 
 ```{r allow errors, echo = FALSE}
 knitr::opts_chunk$set(error = TRUE, warning = FALSE)
