--- a/009.Rmd
+++ b/009.Rmd
@@ -64,7 +64,7 @@ guest %>%
 ```{r}
 (guest_long <- guest %>% 
   pivot_longer(cols  = c(-party, -name), 
-               names_to  = c("values", "event"),
+               names_to  = c(".values", "event"),
                names_sep = "_"))
 ```
 
