--- a/009.Rmd
+++ b/009.Rmd
@@ -3,7 +3,7 @@
 title: "cm009 Exercises: tidy data"
 output: html_notebook
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: inline\
 ---
 ```{r}
 library(tidyr)
